Split config for pylint into seperate file for codacy.

--- a/pylama_for_tests.ini
+++ b/pylama_for_tests.ini
@@ -1,13 +1,9 @@
 [pylama]
 linters = pycodestyle,pydocstyle,pyflakes,mccabe,pylint
-ignore = W0612,D100,D101,D102,D104,D203,D213,C0111,C0102,R0904,W0201,W0212,W0201,R0201
-select = C0103,E1101,R0901,R0902,R0913,R0915,W0141,W0142,W0221,W0232,W0613,W0631
+ignore = D100,D101,D102,D104,D203,D213,I0011,W0612
 
 [pylama:pycodestyle]
 select = E121,E123,E126,E226,E241,E242,E704,W503
 
 [pylama_pylint]
-method-rgx = [a-z_][a-z0-9_]{2,100}$
-variable-rgx = ([a-z_][a-z0-9_]{2,30}$)|([A-Z_][a-zA-Z0-9]{2,30}$)
-include-naming-hint = y
-generated-members = _attributes,Mutable,Immutable
+rcfile=pylintrc
