--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ python:
     - "3.5-dev"
     - "3.6-dev"
     - "nightly"
-install: pip install nose2
-script: make test
+install: pip install nose2 cov-core coveralls
+script: make travis_test
+after_success:
+    coveralls
