--- a/pylama_for_tests.ini
+++ b/pylama_for_tests.ini
@@ -3,7 +3,7 @@ linters = pycodestyle,pydocstyle,pyflakes,mccabe,pylint
 ignore = D100,D101,D102,D104,D203,D213,W0612
 
 [pylama:pycodestyle]
-select = E121,E123,E126,E226,E241,E242,E704,W503
+select = E121,E123,E126,E226,E241,E242,E704
 
 [pylama_pylint]
 rcfile=pylintrc
